--- a/style.css
+++ b/style.css
@@ -9,6 +9,29 @@ html, body {
     margin: 0;
 }
 
+/* Dev Tools To Swap Pages */
+.dev__buttons {
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    bottom: 0;
+}
+
+.dev__buttons button {
+    border: none;
+    border-radius: 10px;
+    color: white;
+    font-family: 'Bebas Neue', Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    text-align: center;
+    background-color: #3abedf;
+    height: 45px;
+    width: 80px;
+    margin: 10px;
+    cursor: pointer;
+}
+/* End of Dev Tools */
+
 .login__container {
     display: flex;
     justify-content: center;
