--- a/style.css
+++ b/style.css
@@ -9,6 +9,21 @@ html, body {
     margin: 0;
 }
 
+html {
+    position: fixed;
+    height: 100%;
+    overflow: hidden;
+}
+
+body {
+    margin: 0;
+    width: 100vw; 
+    height: 100%;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
+  }
+
 /* Dev Tools To Swap Pages */
 .dev__buttons {
     display: flex;
