--- a/style.css
+++ b/style.css
@@ -549,6 +549,7 @@ body {
     width: 1100px;
     height: 75px;
     border-bottom: 1px solid grey;
+    background-color:rgba(0, 0, 0, 0.2);
 }
 
 .follower__avatar {
@@ -771,21 +772,20 @@ body {
     
 
     .profile__feed {
-        background-color: red;
         margin-top: 28px;
-        height: 100%;
+        height: 100vh;
         width: 424px;
     }
 
     /* Follower Mobile Navigation */
 
     .follower__container {
-        background-color: red;
         width: 424px;
         height: 60px;
         justify-content: center;
         margin-top: 0;
         padding: 0;
+        background-color:rgba(0, 0, 0, 0.2);
     }
 
     .follower__names {
