--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 
 /* Dev Tools To Swap Pages */
 .dev__buttons {
-    display: flex;
+    display: -webkit-flex;  
     flex-direction: row;
     position: fixed;
     bottom: 0;
@@ -46,7 +46,7 @@ body {
 /* End of Dev Tools */
 
 .login__container {
-    display: flex;
+    display: -webkit-flex;  
     justify-content: center;
     align-items: center;
     background-color: #1a1a1a;
@@ -56,7 +56,7 @@ body {
 }
 
 .login__box {
-    display: flex;
+    display: -webkit-flex;  
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -145,7 +145,7 @@ body {
 /* Registration Page */
 
 .register__box {
-    display: flex;
+    display: -webkit-flex;  
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -157,7 +157,7 @@ body {
 
 .register__left,
 .register__right {
-    display: flex;
+    display: -webkit-flex;  
     flex-direction: column;
     align-items: center;
     margin-left: 20px;
@@ -169,7 +169,7 @@ body {
 }
 
 .register__form {
-    display: flex;
+    display: -webkit-flex;  
     flex-direction: row;
     align-items: center;
 }
@@ -233,7 +233,7 @@ body {
 /* NavBar CSS */
 
 .website__nav {
-    display: flex;
+    display: -webkit-flex;  
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
@@ -303,7 +303,7 @@ body {
 /* Profile Page CSS */
 
 .profile__container {
-    display: flex;
+    display: -webkit-flex;  
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -313,7 +313,7 @@ body {
 }
 
 .profile__header {
-    display: flex;
+    display: -webkit-flex;  
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -337,7 +337,7 @@ body {
     width: 550px;
     height: 100px;
     border-radius: 0px;
-    display: flex;
+    display: -webkit-flex;  
     align-items: center;
     justify-content: center;
     background-color: #1d1d1b;
@@ -434,7 +434,7 @@ body {
 }
 
 .profile__post__info {
-    display: flex;
+    display: -webkit-flex;  
     justify-content: left;
     align-items: center;
     width: 1040px;
@@ -444,7 +444,7 @@ body {
 }
 
 .profile__post__names {
-    display: flex;
+    display: -webkit-flex;  
     flex-direction: column;
     align-items: left;
     margin: 20px;
@@ -467,7 +467,7 @@ body {
 }
 
 .profile__post__content {
-    display: flex;
+    display: -webkit-flex;  
     flex-direction: row;
     width: 1040px;
     height: 500px;
@@ -476,7 +476,7 @@ body {
 }
 
 .profile__post__left {
-    display: flex;
+    display: -webkit-flex;  
     flex-direction: column;
 
 }
@@ -540,7 +540,7 @@ body {
 /* Follower Panel CSS */
 
 .follower__container {
-    display: flex;
+    display: -webkit-flex;  
     flex-direction: row;
     justify-content: space-around;
     width: 1100px;
@@ -563,7 +563,7 @@ body {
 .follower__names,
 .follower__details,
 .follower__actions {
-    display: flex;
+    display: -webkit-flex;  
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -644,10 +644,11 @@ body {
 /* MESSAGES WEBPAGE CSS */
 
 .messages__container {
-    display: flex;
+    display: -webkit-flex;  
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow-y: auto;
     width: 100vw;
     height: 100vh;
     color: black;
@@ -655,7 +656,7 @@ body {
 
 .messages__feed {
     margin-top: 55px;
-    display: flex;
+    display: -webkit-flex;  
     width: 1100px;
     height: 753px;
     background-color: #1d1d1b;
@@ -676,7 +677,7 @@ body {
 }
 
 .messages__user {
-    display: flex;
+    display: -webkit-flex;  
     flex-direction: row;
     justify-content: left;
     padding-left: 15px;
@@ -737,7 +738,7 @@ body {
 }
 
 .messages__comment {
-    display: flex;
+    display: -webkit-flex;  
     align-items: center;
     width: 770px;
     height: 75px;
@@ -967,7 +968,7 @@ body {
     }
 
     .messages__user {
-        display: flex;
+        display: -webkit-flex;  
         padding-left: 30px;
 
     }
@@ -1031,7 +1032,7 @@ body {
 .overlay__content {
     margin-top: -50px;
     margin-left: -10px;
-    display: flex;
+    display: -webkit-flex;  
     height: 100vh;
     flex-direction: column;
     align-items: left;
