--- a/style.css
+++ b/style.css
@@ -3,24 +3,13 @@
 
 * {
     margin: 0;
+    
 }
-
 html, body {
     margin: 0;
+    overflow: hidden;
 }
 
-html {
-    position: fixed;
-    height: 100%;
-    /* overflow: hidden; */
-}
-
-body {
-    margin: 0;
-    width: 100vw; 
-    height: 100%;
-
-  }
 
 /* Dev Tools To Swap Pages */
 .dev__buttons {
@@ -294,7 +283,7 @@ body {
 /* Feed Page CSS */
 
 .feed__container {
-    height: 100vh;
+    height: 100%;
     background-color:#3abedf;
     overflow-y: auto;
     overflow-x: hidden;
@@ -648,27 +637,27 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow-y: auto;
-    width: 100vw;
-    height: 100vh;
+    overflow-y: scroll;
+    width: 100%;
+    height: 100%;
     color: black;
 }
 
 .messages__feed {
-    margin-top: 55px;
+    margin-top: 100px;
+    margin-bottom: 100px;
     display: -webkit-flex;  
     width: 1100px;
     height: 753px;
     background-color: #1d1d1b;
     border-radius: 0px;
     overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: auto;
     border-radius: 10px 10px 0px 0px;
     /* background-color: green; */
 }
 
 .messages__users {
-
     width: 330px;
     border-radius: 10px 0px 0px 0px;
     height: 753px;
@@ -951,7 +940,7 @@ body {
     /* Messages Mobile CSS */
 
     .messages__feed {
-        margin-top: 96px;
+        margin-top: 124px;
         height: 700px;
         width: 424px;
     }
@@ -1072,3 +1061,4 @@ body {
     color: #edf0f1;
     cursor: pointer;
   }
+
