--- a/style.css
+++ b/style.css
@@ -10,6 +10,29 @@ html, body {
     overflow: hidden;
 }
 
+.register__box {
+    font-family: 'Bebas Neue', Arial, Helvetica, sans-serif;
+    font-size: 28px;
+    color: white;
+}
+
+.back__to__login {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    all:unset;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    font-family: 'Bebas Neue', Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    text-align: center;
+    background-color: #3abedf;
+    height: 35px;
+    width: 150px;
+    margin: 10px;
+    cursor: pointer;
+}
 
 /* Dev Tools To Swap Pages */
 .dev__buttons {
@@ -38,6 +61,14 @@ html, body {
     display: -webkit-flex;  
     justify-content: center;
     align-items: center;
+    background:
+    /* top, transparent black, faked with gradient */ 
+    linear-gradient(
+      rgba(0, 0, 0, 0.4), 
+      rgba(0, 0, 0, 0.9)
+    ),
+    /* bottom, image */
+    url("images/loginBackground.jpg");
     background-color: #1a1a1a;
     background-size: 100%;
     height: 100vh;
@@ -110,12 +141,14 @@ html, body {
 }
 
 .login__submit {
+    margin-left: 66px;
     margin-top: 50px;
 }
 
 .login__submit input,
 .login__submit a,
-.login__submit button {
+.login__submit button,
+.register__submit button {
     text-decoration: none;
     background: none;
     border: none;
@@ -129,6 +162,10 @@ html, body {
     border-radius: 5px;
     width: 132px;
     height: 40px;
+}
+
+.register__submit button {
+    margin-top: 20px;
 }
 
 /* Registration Page */
